--- a/lab-02/Lab 2.ipynb
+++ b/lab-02/Lab 2.ipynb
@@ -16,7 +16,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Autoload setup (you don't need to edit this cell); instructions to: \n",
@@ -169,7 +171,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# The gradient descent algorithm as explained in page 26\n",
