--- a/lab-03/Lab 3 Ex. 1 - Binary Classification.ipynb
+++ b/lab-03/Lab 3 Ex. 1 - Binary Classification.ipynb
@@ -305,8 +305,8 @@
     "results_synthetic = evaluate_classifiers_ROC(classifiers, X_train, y_train, X_test, y_test)\n",
     "\n",
     "# Show the result metrics and the ROC curves.\n",
-    "xlim = [0.0, 1.0]\n",
-    "ylim = [0.0, 1.05] \n",
+    "xlim = [0.0, 1.5]\n",
+    "ylim = [0.0, 1.5] \n",
     "plot_ROCs(results_synthetic, xlim, ylim)\n",
     "show_classifier_metrics(results_synthetic, y_test)"
    ]
@@ -341,7 +341,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Load up one of the standard datasets provided by the SciKit-Learn package.\n",
@@ -369,7 +371,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Again we split the data into training and test sets, 50/50.\n",
@@ -432,7 +436,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Now we evaluate this new set of classifiers, which use the weights, and examine the performance.\n",
@@ -474,7 +480,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
