--- a/lab-03/Lab 3 Ex. 1 - Binary Classification.ipynb
+++ b/lab-03/Lab 3 Ex. 1 - Binary Classification.ipynb
@@ -305,8 +305,8 @@
     "results_synthetic = evaluate_classifiers_ROC(classifiers, X_train, y_train, X_test, y_test)\n",
     "\n",
     "# Show the result metrics and the ROC curves.\n",
-    "xlim = [0.0, 1.5]\n",
-    "ylim = [0.0, 1.5] \n",
+    "xlim = [0.0, .15]\n",
+    "ylim = [0.0, 1.05] \n",
     "plot_ROCs(results_synthetic, xlim, ylim)\n",
     "show_classifier_metrics(results_synthetic, y_test)"
    ]
