--- a/lab-03/Lab 3 Ex. 1 - Binary Classification.ipynb
+++ b/lab-03/Lab 3 Ex. 1 - Binary Classification.ipynb
@@ -437,7 +437,7 @@
    "source": [
     "# Now we evaluate this new set of classifiers, which use the weights, and examine the performance.\n",
     "results_real_data = evaluate_classifiers_ROC(classifiers_w, X_train, y_train, X_test, y_test)\n",
-    "xlim = [0.0, 1.0]\n",
+    "xlim = [0.0, .2]\n",
     "ylim = [0.0, 1.05]\n",
     "plot_ROCs(results_real_data, xlim, ylim)\n",
     "show_classifier_metrics(results_real_data, y_test)"
