--- a/lab-03/Lab 3 Ex. 2 - Multiclass Classification.ipynb
+++ b/lab-03/Lab 3 Ex. 2 - Multiclass Classification.ipynb
@@ -26,7 +26,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Autoload setup (you don't need to edit this cell); instructions to: \n",
@@ -267,7 +269,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Question:\n",
@@ -306,6 +310,15 @@
     "#\n",
     "# Provide your answer in the function 'question_4' in the lab module ('lab_3.py')."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -324,7 +337,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
