--- a/lab-04/Lab 4.ipynb
+++ b/lab-04/Lab 4.ipynb
@@ -169,17 +169,22 @@
     "# a new feature vector of size 64.\n",
     "# The last layer essentially does the classification using multonomial regression\n",
     "# based on these new features. \n",
-    "\n",
+    "rate = .2\n",
     "inputs = keras.layers.Input(shape=(32, 32, 3))\n",
+    "x = Dropout(rate, noise_shape=None, seed=None)(x)\n",
     "x = Flatten()(inputs)\n",
-    "x = Dense(30, activation='relu')(x)\n",
-    "x = Dense(30, activation='relu')(x)\n",
+    "x = Dense(500, activation='relu')(x)\n",
+    "x = Dropout(rate, noise_shape=None, seed=None)(x)\n",
+    "x = Dense(500, activation='relu')(x)\n",
+    "x = Dropout(rate, noise_shape=None, seed=None)(x)\n",
+    "x = Dense(500, activation='relu')(x)\n",
+    "x = Dropout(rate, noise_shape=None, seed=None)(x)\n",
     "\n",
     "predictions = Dense(10, activation='softmax')(x)\n",
     "\n",
     "# we create the model \n",
     "model = keras.models.Model(inputs=inputs, outputs=predictions)\n",
-    "opt = keras.optimizers.SGD(lr=0.01, decay=1e-6, momentum=0.9, nesterov=True)\n",
+    "opt = keras.optimizers.Adam(lr=0.001, beta_1=0.9, beta_2=0.999, epsilon=1e-08, decay=0.0)\n",
     "\n",
     "# setup the optimisation strategy\n",
     "model.compile(optimizer=opt,\n",
@@ -204,7 +209,7 @@
     "\n",
     "# and train\n",
     "model.fit(X_train, Y_train,\n",
-    "          batch_size=4096, epochs=40, \n",
+    "          batch_size=4096, epochs=240, \n",
     "          validation_data=(X_validation, Y_validation), \n",
     "          callbacks=[pltCallBack])\n"
    ]
@@ -285,6 +290,24 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
