--- a/lab-03/Lab 3 Ex. 1 - Binary Classification.ipynb
+++ b/lab-03/Lab 3 Ex. 1 - Binary Classification.ipynb
@@ -43,7 +43,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%%javascript\n",
@@ -278,6 +280,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
