Backing up files

--- a/lab-04/Lab 4.ipynb
+++ b/lab-04/Lab 4.ipynb
@@ -169,15 +169,15 @@
     "# a new feature vector of size 64.\n",
     "# The last layer essentially does the classification using multonomial regression\n",
     "# based on these new features. \n",
-    "rate = .2\n",
+    "rate = .3\n",
     "inputs = keras.layers.Input(shape=(32, 32, 3))\n",
     "x = Dropout(rate, noise_shape=None, seed=None)(x)\n",
     "x = Flatten()(inputs)\n",
-    "x = Dense(500, activation='relu')(x)\n",
+    "x = Dense(500, kernel_regularizer=l2(.01), activation='relu')(x)\n",
     "x = Dropout(rate, noise_shape=None, seed=None)(x)\n",
-    "x = Dense(500, activation='relu')(x)\n",
+    "x = Dense(500, kernel_regularizer=l2(.01), activation='relu')(x)\n",
     "x = Dropout(rate, noise_shape=None, seed=None)(x)\n",
-    "x = Dense(500, activation='relu')(x)\n",
+    "x = Dense(500, kernel_regularizer=l2(.01), activation='relu')(x)\n",
     "x = Dropout(rate, noise_shape=None, seed=None)(x)\n",
     "\n",
     "predictions = Dense(10, activation='softmax')(x)\n",
@@ -209,7 +209,7 @@
     "\n",
     "# and train\n",
     "model.fit(X_train, Y_train,\n",
-    "          batch_size=4096, epochs=240, \n",
+    "          batch_size=4096, epochs=120, \n",
     "          validation_data=(X_validation, Y_validation), \n",
     "          callbacks=[pltCallBack])\n"
    ]
