backing up work

--- a/lab-04/Lab 4.ipynb
+++ b/lab-04/Lab 4.ipynb
@@ -169,16 +169,15 @@
     "# a new feature vector of size 64.\n",
     "# The last layer essentially does the classification using multonomial regression\n",
     "# based on these new features. \n",
-    "rate = .3\n",
+    "rate = .1\n",
     "inputs = keras.layers.Input(shape=(32, 32, 3))\n",
-    "x = Dropout(rate, noise_shape=None, seed=None)(x)\n",
     "x = Flatten()(inputs)\n",
-    "x = Dense(500, kernel_regularizer=l2(.01), activation='relu')(x)\n",
     "x = Dropout(rate, noise_shape=None, seed=None)(x)\n",
-    "x = Dense(500, kernel_regularizer=l2(.01), activation='relu')(x)\n",
+    "x = Dense(200, kernel_regularizer=l2(.01), activation='relu')(x)\n",
     "x = Dropout(rate, noise_shape=None, seed=None)(x)\n",
-    "x = Dense(500, kernel_regularizer=l2(.01), activation='relu')(x)\n",
+    "x = Dense(1000, kernel_regularizer=l2(.0001), activation='relu')(x)\n",
     "x = Dropout(rate, noise_shape=None, seed=None)(x)\n",
+    "x = Dense(100, kernel_regularizer=l2(.01), activation='relu')(x)\n",
     "\n",
     "predictions = Dense(10, activation='softmax')(x)\n",
     "\n",
@@ -217,7 +216,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# write model to model.json and weights to model.h5 for submission\n",
