--- a/lab-04/Lab 4.ipynb
+++ b/lab-04/Lab 4.ipynb
@@ -169,15 +169,15 @@
     "# a new feature vector of size 64.\n",
     "# The last layer essentially does the classification using multonomial regression\n",
     "# based on these new features. \n",
-    "rate = .1\n",
+    "rate = .3\n",
     "inputs = keras.layers.Input(shape=(32, 32, 3))\n",
     "x = Flatten()(inputs)\n",
     "x = Dropout(rate, noise_shape=None, seed=None)(x)\n",
-    "x = Dense(200, kernel_regularizer=l2(.01), activation='relu')(x)\n",
+    "x = Dense(1800, activation='relu')(x)\n",
     "x = Dropout(rate, noise_shape=None, seed=None)(x)\n",
-    "x = Dense(1000, kernel_regularizer=l2(.0001), activation='relu')(x)\n",
+    "x = Dense(1000, activation='relu')(x)\n",
     "x = Dropout(rate, noise_shape=None, seed=None)(x)\n",
-    "x = Dense(100, kernel_regularizer=l2(.01), activation='relu')(x)\n",
+    "x = Dense(90, activation='relu')(x)\n",
     "\n",
     "predictions = Dense(10, activation='softmax')(x)\n",
     "\n",
@@ -208,7 +208,7 @@
     "\n",
     "# and train\n",
     "model.fit(X_train, Y_train,\n",
-    "          batch_size=4096, epochs=120, \n",
+    "          batch_size=4096, epochs=40, \n",
     "          validation_data=(X_validation, Y_validation), \n",
     "          callbacks=[pltCallBack])\n"
    ]
@@ -216,9 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# write model to model.json and weights to model.h5 for submission\n",
