got the model to 60%, working on getting it to 80%

--- a/lab-05/Lab 5.ipynb
+++ b/lab-05/Lab 5.ipynb
@@ -23,6 +23,8 @@
     "from keras import datasets\n",
     "from keras.layers import Dense, Flatten, Dropout, Activation\n",
     "from keras.layers import PReLU, LeakyReLU, Conv2D, MaxPool2D, Lambda\n",
+    "from keras.constraints import maxnorm\n",
+    "from keras.layers import MaxPooling2D\n",
     "from keras.regularizers import l2\n",
     "\n",
     "from keras.models import model_from_json\n",
@@ -161,7 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The model below contains 2 hidden layers with 64 nodes each. \n",
+    "\n",
     "# The activation functions for these 2 layers is the ReLU\n",
     "# The network ends with a 10 nodes layer with softmax activation\n",
     "# The first 2 hidden layers transform the original features into \n",
@@ -170,40 +172,49 @@
     "# based on these new features. \n",
     "\n",
     "inputs = keras.layers.Input(shape=(32, 32, 3))\n",
-    "\n",
+    "rate = .2\n",
     "# Replace these two lines with some convolutional layers;\n",
     "# see keras docs for Conv2D, MaxPool2D, etc.\n",
     "# Maybe stick in some Dropout as well?\n",
     "# Block 1\n",
-    "x = Conv2D(5, (3,3), activation='relu', padding='same', name='block1_conv1')(inputs)\n",
-    "x = Conv2D(5, (3,3), activation='relu', padding='same', name='block1_conv2')(x)\n",
-    "x = MaxPool2D((2,2), strides=(2,2), name='block1_pool')(x)\n",
+    "x = Conv2D(32, (3,3), activation='relu', padding='same', name='block1_conv1')(inputs)\n",
+    "x = Dropout(rate, noise_shape=None, seed=None)(x)\n",
+    "x = Conv2D(32, (3,3), activation='relu', padding='same', name='block1_conv2')(x)\n",
+    "x = MaxPooling2D((2,2), strides=(2,2), name='block1_pool')(x)\n",
     "\n",
     "# Block 2\n",
-    "x = Conv2D(5, (3,3), activation='relu', padding='same', name='block2_conv1')(x)\n",
-    "x = Conv2D(5, (3,3), activation='relu', padding='same', name='block2conv2')(x)\n",
-    "x = MaxPool2D((2,2), strides=(2,2), name='block2_pool')(x)\n",
+    "x = Conv2D(64, (3,3), activation='relu', padding='same', name='block2_conv1')(x)\n",
+    "x = Dropout(rate, noise_shape=None, seed=None)(x)\n",
+    "x = Conv2D(164, (3,3), activation='relu', padding='same', name='block2_conv2')(x)\n",
+    "x = MaxPooling2D((2,2), strides=(2,2), name='block2_pool')(x)\n",
     "\n",
     "# Block 3\n",
-    "x = Conv2D(5, (3,3), activation='relu', padding='same', name='block3_conv1')(x)\n",
-    "x = Conv2D(5, (3,3), activation='relu', padding='same', name='block3_conv2')(x)\n",
-    "x = MaxPool2D((2,2), strides=(2,2), name='block3_pool')(x)\n",
+    "x = Conv2D(128, (3,3), activation='relu', padding='same', name='block3_conv1')(x)\n",
+    "x = Dropout(rate, noise_shape=None, seed=None)(x)\n",
+    "x = Conv2D(128, (3,3), activation='relu', padding='same', name='block3_conv2')(x)\n",
+    "x = MaxPooling2D((2,2), strides=(2,2), name='block3_pool')(x)\n",
     "\n",
     "# Block 4\n",
-    "x = Conv2D(3, (3,3), activation='relu', padding='same', name='block4_conv1')(x)\n",
-    "x = Conv2D(3, (3,3), activation='relu', padding='same', name='block4_conv2')(x)\n",
-    "x = MaxPool2D((2,2), strides=(2,2), name='block4_pool')(x)\n",
+    "x = Conv2D(256, (3,3), activation='relu', padding='same', name='block4_conv1')(x)\n",
+    "x = Dropout(rate, noise_shape=None, seed=None)(x)\n",
+    "x = Conv2D(256, (3,3), activation='relu', padding='same', name='block4_conv2')(x)\n",
+    "x = MaxPooling2D((2,2), strides=(2,2), name='block4_pool')(x)\n",
     "\n",
-    "# Block 5\n",
-    "x = Conv2D(3, (3,3), activation='relu', padding='same', name='block5_conv1')(x)\n",
-    "x = Conv2D(3, (3,3), activation='relu', padding='same', name='block5_conv2')(x)\n",
-    "x = MaxPool2D((2,2), strides=(2,2), name='block5_pool')(x)\n",
+    "# # Block 5\n",
+    "# x = Conv2D(16, (3,3), activation='relu', padding='same', name='block5_conv1')(x)\n",
+    "# x = Conv2D(16, (3,3), activation='relu', padding='same', name='block5_conv2')(x)\n",
+    "# x = MaxPooling2D((2,2), strides=(2,2), name='block5_pool')(x)\n",
     "\n",
     "# The last layers of your model should look something like\n",
     "# this to be well-structured for the final classification:\n",
+    "\n",
+    "\n",
     "x = Flatten(name='flatten')(x)\n",
-    "x = Dense(3, activation='sigmoid', name='fc1')(x)  # You could have a few more non-2D layers here\n",
-    "#x = Dense(64, activation='relu', name='fc2')(x)  # You could have a few more non-2D layers here\n",
+    "x = Dropout(rate, noise_shape=None, seed=None)(x)\n",
+    "x = Dense(1024, activation='relu', kernel_constraint=maxnorm(3), name='fc1')(x)  # You could have a few more non-2D layers here\n",
+    "x = Dropout(rate, noise_shape=None, seed=None)(x)\n",
+    "x = Dense(512, activation='relu', kernel_constraint=maxnorm(3), name='fc2')(x)  # You could have a few more non-2D layers here\n",
+    "x = Dropout(rate, noise_shape=None, seed=None)(x)\n",
     "\n",
     "predictions = Dense(10, activation='softmax')(x)  # There are 10 classes in this problem, hence the '10'.\n",
     "\n",
@@ -233,7 +244,7 @@
     "# Note that you can evaluate this cell repeatedly to push the training of your model further.\n",
     "# You might want to reduce the value of 'num_epochs' if each evaluation starts to take too long.\n",
     "\n",
-    "num_epochs = 40\n",
+    "num_epochs = 120\n",
     "\n",
     "# Create an instance of our callback functions class, to plot our loss function and accuracy with each epoch.\n",
     "pltCallBack = PlotLossAccuracy()\n",
