Changed to SGD optimizer

--- a/lab-05/Lab 5.ipynb
+++ b/lab-05/Lab 5.ipynb
@@ -220,7 +220,9 @@
     "\n",
     "# Create the model.\n",
     "model = keras.models.Model(inputs=inputs, outputs=predictions)\n",
-    "opt = keras.optimizers.Adam(lr=0.001, beta_1=0.9, beta_2=0.999, epsilon=1e-08, decay=0.0)\n",
+    "lrate = 0.01\n",
+    "decay = \n",
+    "opt = keras.optimizers.SGD(lr=lrate, momentum=0.9, decay=decay, nesterov=False)\n",
     "\n",
     "# Setup the optimisation strategy.\n",
     "model.compile(optimizer=opt,\n",
@@ -259,9 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# write model to model.json and weights to model.h5 for submission\n",
