Changed to SGD optimizer

--- a/lab-05/Lab 5.ipynb
+++ b/lab-05/Lab 5.ipynb
@@ -221,7 +221,8 @@
     "# Create the model.\n",
     "model = keras.models.Model(inputs=inputs, outputs=predictions)\n",
     "lrate = 0.01\n",
-    "decay = \n",
+    "num_epochs = 120\n",
+    "decay = lrate/num_epochs\n",
     "opt = keras.optimizers.SGD(lr=lrate, momentum=0.9, decay=decay, nesterov=False)\n",
     "\n",
     "# Setup the optimisation strategy.\n",
@@ -246,7 +247,6 @@
     "# Note that you can evaluate this cell repeatedly to push the training of your model further.\n",
     "# You might want to reduce the value of 'num_epochs' if each evaluation starts to take too long.\n",
     "\n",
-    "num_epochs = 120\n",
     "\n",
     "# Create an instance of our callback functions class, to plot our loss function and accuracy with each epoch.\n",
     "pltCallBack = PlotLossAccuracy()\n",
