Changed to ADAM optimizer

--- a/lab-05/Lab 5.ipynb
+++ b/lab-05/Lab 5.ipynb
@@ -185,7 +185,7 @@
     "# Block 2\n",
     "x = Conv2D(64, (3,3), activation='relu', padding='same', name='block2_conv1')(x)\n",
     "x = Dropout(rate, noise_shape=None, seed=None)(x)\n",
-    "x = Conv2D(164, (3,3), activation='relu', padding='same', name='block2_conv2')(x)\n",
+    "x = Conv2D(64, (3,3), activation='relu', padding='same', name='block2_conv2')(x)\n",
     "x = MaxPooling2D((2,2), strides=(2,2), name='block2_pool')(x)\n",
     "\n",
     "# Block 3\n",
@@ -195,15 +195,15 @@
     "x = MaxPooling2D((2,2), strides=(2,2), name='block3_pool')(x)\n",
     "\n",
     "# Block 4\n",
-    "x = Conv2D(256, (3,3), activation='relu', padding='same', name='block4_conv1')(x)\n",
+    "x = Conv2D(512, (3,3), activation='relu', padding='same', name='block4_conv1')(x)\n",
     "x = Dropout(rate, noise_shape=None, seed=None)(x)\n",
-    "x = Conv2D(256, (3,3), activation='relu', padding='same', name='block4_conv2')(x)\n",
+    "x = Conv2D(512, (3,3), activation='relu', padding='same', name='block4_conv2')(x)\n",
     "x = MaxPooling2D((2,2), strides=(2,2), name='block4_pool')(x)\n",
     "\n",
-    "# # Block 5\n",
-    "# x = Conv2D(16, (3,3), activation='relu', padding='same', name='block5_conv1')(x)\n",
-    "# x = Conv2D(16, (3,3), activation='relu', padding='same', name='block5_conv2')(x)\n",
-    "# x = MaxPooling2D((2,2), strides=(2,2), name='block5_pool')(x)\n",
+    "# Block 5\n",
+    "x = Conv2D(512, (3,3), activation='relu', padding='same', name='block5_conv1')(x)\n",
+    "x = Conv2D(512, (3,3), activation='relu', padding='same', name='block5_conv2')(x)\n",
+    "x = MaxPooling2D((2,2), strides=(2,2), name='block5_pool')(x)\n",
     "\n",
     "# The last layers of your model should look something like\n",
     "# this to be well-structured for the final classification:\n",
@@ -220,10 +220,8 @@
     "\n",
     "# Create the model.\n",
     "model = keras.models.Model(inputs=inputs, outputs=predictions)\n",
-    "lrate = 0.01\n",
-    "num_epochs = 120\n",
-    "decay = lrate/num_epochs\n",
-    "opt = keras.optimizers.SGD(lr=lrate, momentum=0.9, decay=decay, nesterov=False)\n",
+    "\n",
+    "opt = keras.optimizers.Adam(lr=0.001, beta_1=0.9, beta_2=0.999, epsilon=1e-08, decay=0.0)\n",
     "\n",
     "# Setup the optimisation strategy.\n",
     "model.compile(optimizer=opt,\n",
@@ -247,6 +245,7 @@
     "# Note that you can evaluate this cell repeatedly to push the training of your model further.\n",
     "# You might want to reduce the value of 'num_epochs' if each evaluation starts to take too long.\n",
     "\n",
+    "num_epochs = 120\n",
     "\n",
     "# Create an instance of our callback functions class, to plot our loss function and accuracy with each epoch.\n",
     "pltCallBack = PlotLossAccuracy()\n",
@@ -261,7 +260,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# write model to model.json and weights to model.h5 for submission\n",
