AIMING FOR THE STARS BABYYYYYY

--- a/lab-05/Lab 5.ipynb
+++ b/lab-05/Lab 5.ipynb
@@ -172,7 +172,7 @@
     "# based on these new features. \n",
     "\n",
     "inputs = keras.layers.Input(shape=(32, 32, 3))\n",
-    "rate = .2\n",
+    "rate = .35\n",
     "# Replace these two lines with some convolutional layers;\n",
     "# see keras docs for Conv2D, MaxPool2D, etc.\n",
     "# Maybe stick in some Dropout as well?\n",
@@ -194,16 +194,16 @@
     "x = Conv2D(128, (3,3), activation='relu', padding='same', name='block3_conv2')(x)\n",
     "x = MaxPooling2D((2,2), strides=(2,2), name='block3_pool')(x)\n",
     "\n",
-    "# Block 4\n",
-    "x = Conv2D(512, (3,3), activation='relu', padding='same', name='block4_conv1')(x)\n",
-    "x = Dropout(rate, noise_shape=None, seed=None)(x)\n",
-    "x = Conv2D(512, (3,3), activation='relu', padding='same', name='block4_conv2')(x)\n",
-    "x = MaxPooling2D((2,2), strides=(2,2), name='block4_pool')(x)\n",
+    "# # Block 4\n",
+    "# x = Conv2D(512, (3,3), activation='relu', padding='same', name='block4_conv1')(x)\n",
+    "# x = Dropout(rate, noise_shape=None, seed=None)(x)\n",
+    "# x = Conv2D(512, (3,3), activation='relu', padding='same', name='block4_conv2')(x)\n",
+    "# x = MaxPooling2D((2,2), strides=(2,2), name='block4_pool')(x)\n",
     "\n",
-    "# Block 5\n",
-    "x = Conv2D(512, (3,3), activation='relu', padding='same', name='block5_conv1')(x)\n",
-    "x = Conv2D(512, (3,3), activation='relu', padding='same', name='block5_conv2')(x)\n",
-    "x = MaxPooling2D((2,2), strides=(2,2), name='block5_pool')(x)\n",
+    "# # Block 5\n",
+    "# x = Conv2D(512, (3,3), activation='relu', padding='same', name='block5_conv1')(x)\n",
+    "# x = Conv2D(512, (3,3), activation='relu', padding='same', name='block5_conv2')(x)\n",
+    "# x = MaxPooling2D((2,2), strides=(2,2), name='block5_pool')(x)\n",
     "\n",
     "# The last layers of your model should look something like\n",
     "# this to be well-structured for the final classification:\n",
@@ -245,7 +245,7 @@
     "# Note that you can evaluate this cell repeatedly to push the training of your model further.\n",
     "# You might want to reduce the value of 'num_epochs' if each evaluation starts to take too long.\n",
     "\n",
-    "num_epochs = 120\n",
+    "num_epochs = 25\n",
     "\n",
     "# Create an instance of our callback functions class, to plot our loss function and accuracy with each epoch.\n",
     "pltCallBack = PlotLossAccuracy()\n",
@@ -260,9 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# write model to model.json and weights to model.h5 for submission\n",
